--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
-<h1>Hello World!</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+	<!-- metadata -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- site title -->
+	<title>Athena For NM</title>
+
+	<!-- favicon -->
+	<link rel="icon" type="image/x-icon" href="assets/images/AthenaFavicon-70x70.ico">
+
+	<!-- open sans -->
+	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+
+	<!-- style -->
+	<link href="assets/css/style.css" rel="stylesheet">
+
+	<!-- navbar -->
+	<link rel="stylesheet" href="assets/css/navbar.css">
+
+	<!-- header -->
+	<link rel="stylesheet" href="assets/css/landing.css">
+
+	<!-- content -->
+	<link href="assets/css/content.css" rel="stylesheet">
+
+	<!-- footer -->
+	<link href="assets/css/footer.css" rel="stylesheet">
+
+
+	<script src="assets/js/custom.js" type="module"></script>
+</head>
+
+<body>
+	<nav class="navbar">
+		<a href="#" class="logo">
+			<h2>Athena Christodoulou</h2>
+			<hr>
+			<p>NM Senate D21 Candidate – Democrat</p>
+		</a>
+		<ul class="links">
+			<li><a href="default.asp">Home</a></li>
+			<li><a href="news.asp">Issues</a></li>
+			<li><a href="contact.asp">About</a></li>
+			<li><a href="about.asp">Donate</a></li>
+		</ul>
+	</nav>
+
+	<canvas id="glcanvas"></canvas>
+
+	<div class="header">
+		<img src="assets/images/welcome/welcome-banner.jpg" alt="Welcome Banner">
+		<div class="volunteer">
+			<h2>Clean Energy for New Mexico</h2>
+			<form action="/action_page.php">
+				<label for="email">Email</label>
+				<input type="text" id="email" name="email" placeholder="Your email..">
+
+				<label for="zip-code">Zip Code</label>
+				<input type="text" id="zip-code" name="zip-code" placeholder="Your zip code..">
+
+				<input type="submit" value="Volunteer">
+			</form>
+		</div>
+		<div class="tagline">
+			<p>Together We Can Make New Mexico</p>
+			<h1>SMARTER SAFER STRONGER</h1>
+		</div>
+	</div>
+
+	<div id="wrapper" class="divided">
+
+		<!-- Two -->
+		<section class="splash-card" id="first">
+			<video controls>
+				<source src="assets/videos/Athena for NM.mp4" type="video/mp4">
+				Your browser does not support the video tag.
+			</video>
+
+		</section>
+
+		<!-- Three -->
+		<section class="issue-card">
+			<img src="assets/images/issues/AthenaForNM-Education.png" alt="AthenaForNM-Education.png">
+			<div class="content">
+				<h2>Smarter</h2>
+				<p>Good education. In order to obtain statehood, New Mexico established a public education system. Free and
+					accessible education makes democracy work for all. Athena has been a local educator, student, and parent. But,
+					she also has experience in other states and systems.
+
+					When her oldest son, Anthony, was in 3rd grade, in Florida, she discovered his class was not learning math.
+					Working with other parent volunteers, school administration, and an existing math curriculum, she led the Math
+					Superstars program, school-wide, for 1st-5th grades during his last two years at the school.
+
+					Our schools need to be the best they can be and everyone needs to be a “forever learner.” We have to make sure
+					all our students seek to attain their maximum potential AND offer that opportunity. Athena will bring
+					educators, parents, and students together for a smarter New Mexico</p>
+			</div>
+		</section>
+
+		<!-- Four -->
+		<section class="issue-card">
+			<img src="assets/images/issues/AthenaForNM-Climate.jpg" alt="AthenaForNM-Climate.jpg">
+			<div class="content">
+				<h2>Safer</h2>
+				<p>Now and into the 22nd Century. Common sense gun laws protect everyone’s rights to life, liberty and the
+					pursuit of happiness. We all want to feel safe in our communities. But what about the future?
+					NM laid the groundwork with the Energy Transition Act in 2019 for part of the solution. It engaged community,
+					utilities, and others to enact a planned reduction of our greenhouse gas emissions across the state from
+					electric generation.
+
+					But we need to MAKE it happen and MANDATE more. Athena will bring her engineering mindset and mom’s
+					determination to the senate floor for a safer New Mexico.</p>
+			</div>
+		</section>
+
+		<section class="issue-card">
+			<img src="assets/images/issues/AthenaForNM-Economy.jpg" alt="AthenaForNM-Economy.jpg">
+			<div class="content">
+				<h2>Stronger</h2>
+				<p>Diverse economy. Athena will take her experiences as a small business owner, start-up entrepreneur, and tech
+					transfer expert to foster collaboration. She knows we have all the ingredients for a diverse economy: three
+					National Labs, three top universities, and outstanding regional career technical learning centers to develop
+					burgeoning industries.
+
+					NM has the opportunity to be the hub of “Green-shoring.” Does our eager new generation see the opportunities?
+					Athena will keep us focused on people, planet, and profit….for ALL.</p>
+			</div>
+		</section>
+	</div>
+
+	<section class="about">
+		<h2>About</h2>
+		<p>Retired U.S. Navy engineer, a scientist, a technology entrepreneur. She has been an advocate for clean energy to
+			take us safely into the 22nd century for over a decade, now. She is also a community member, mother, grandmother
+			and wife. All of these experiences have shaped her life and helped her understand that the next chapter of her
+			life should be in public service.
+
+			Clean energy economy advocate. Athena is currently taking her experiences as an energy engineer, Community Solar
+			coach for DOE, and past president of the New Mexico Solar Energy Association to shape next year’s legislation to
+			bring Community Solar to NM. Opportunities for economic development include project development, construction,
+			investment, and subscriber companies.
+
+			Community, family, and faith. Balancing her work and advocacy with raising three sons in a multigenerational
+			household was always challenging. When COVID-19 became evident and measures for defeating it were issued, she
+			acted. She immediately designed a no-sew mask, set new rules for visiting her 91 year-old mother, and began
+			following the data and seeking reliable information. She knows that while we may be inconvenienced now, we will
+			all appreciate everyone’s efforts in the future when we can once again be more physically connected. For more,
+			visit her Ballotpedia page.</p>
+	</section>
+
+	<!-- Footer -->
+	<footer>
+		<p>&copy; Athena Christodoulou</p>
+	</footer>
+</body>
+
+</html>
