--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<!-- Two -->
 		<section class="splash-card" id="first">
 			<video controls>
-				<source src="assets/videos/Athena for NM.mp4" type="video/mp4">
+				<source src="Athena for NM - Education.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 			</video>
 
