--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <!-- START WELCOME SECTION -->
 
   <section id="welcome-section" class="welcome-section">
-    <h1>Hey I am Mimic</h1>
-    <p>a web developer</p>
+    <h1>Hello I'm Brett!</h1>
   </section>
 
   <!-- END WELCOME SECTION -->
