Updated footer placeholder text.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- START FOOTER SECTION -->
 
   <footer>
-    <p>footer</p>
+    <p>Footer here.</p>
   </footer>
 
   <!-- END FOOTER SECTION -->
