--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
   <!-- START PROJECTS SECTION -->
 
   <section id="projects" class="projects-section">
-    <h2 class="projects-section-header">Projects</h2>
+    <h1 class="projects-section-header">Projects</h2>
 
-    <div class="projects-grid">
-      <a href="" target="_blank" class="project project-tile">
-        <img class="project-image" src="" alt="project image" />
-        <p class="project-title">
-          <span class="code">&lt;</span>
-          This website
-          <span class="code">&#47;&gt;</span>
-        </p>
-      </a>
-    </div>
+      <div class="projects-grid">
+        <a href="" target="_blank" class="project project-tile">
+          <img class="project-image" src="" alt="project image" />
+          <h2 class="project-title">
+            This website
+          </h2>
+        </a>
+      </div>
   </section>
 
   <!-- END PROJECTS SECTION -->
@@ -29,8 +27,8 @@
 
   <section id="contact" class="contact-section">
     <div class="contact-links">
-      <a id="profile-link" href="https://github.com/Kidder-B/Kidder-B.github.io" target="_blank"
-        class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+      <a id="profile-link" href="https://github.com/Kidder-B/" target="_blank" class="btn contact-details"><i
+          class="fab fa-github"></i> GitHub</a>
     </div>
   </section>
 
