Removed more cruft. Added link to this website's GitHub.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
 
   <section id="projects" class="projects-section">
     <h1 class="projects-section-header">Projects</h2>
-
-      <div class="projects-grid">
-        <a href="" target="_blank" class="project project-tile">
-          <h2 class="project-title">
-            This website
-          </h2>
-        </a>
-      </div>
+      <a href="https://github.com/Kidder-B/Kidder-B.github.io" target="_blank" class="project project-tile">This
+        Website</a>
   </section>
 
   <!-- END PROJECTS SECTION -->
