--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="styles.css" />
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -19,10 +20,8 @@
   <!-- START CONTACT SECTION -->
 
   <section id="contact" class="contact-section">
-    <div class="contact-links">
-      <a id="profile-link" href="https://github.com/Kidder-B/" target="_blank" class="btn contact-details"><i
-          class="fab fa-github"></i> GitHub</a>
-    </div>
+    <a class="socials" id="profile-link" href="https://github.com/Kidder-B/" target="_blank"
+      class="btn contact-details"><i class="fa fa-github"></i></a>
   </section>
 
   <!-- END CONTACT SECTION -->
